JumpScript/tests/baselines/reference/doubleUnderscoreExportStarConflict.errors.txt
tests/cases/compiler/index.jmpx(2,1): error TS2308: Module "./b" has already exported a member named '__foo'. Consider explicitly re-exporting to resolve the ambiguity.


==== tests/cases/compiler/index.jmpx (1 errors) ====
    export * from "./b";
    export * from "./c";
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2308: Module "./b" has already exported a member named '__foo'. Consider explicitly re-exporting to resolve the ambiguity.
    
==== tests/cases/compiler/b.jump (0 errors) ====
    export function __foo(): number | void {}
    
==== tests/cases/compiler/c.jump (0 errors) ====
    export function __foo(): string | void {}
    